# ptlink-services2

./: CHANGES  FAQ  FEATURES  INSTALL  Makefile.in  README  TSguide.txt  configure  sendbug  shtool
ChangeLog/: 1.x  2.1.x-2.10.x  2.11.x  2.12.x  2.13.x  2.14.x  2.15.x  2.16.x  2.17.x  2.18.x  2.19.x  2.20.x  2.21.x  2.22.x  2.23.x  2.24.x  2.25.x  DB_versions
MySQL/: INSTALL
autoconf/: configure.in  install-sh
cron/: services.cron  serviceschk
data/: index.html  nicks.plot  ptlink.motd
html_manual/: chan.htm  index.html  main.htm  memo.htm  news.htm  nick.htm  top.htm
import/: HOW-TO  epona-1.4.11_stdb.diff  ircservices-4.5.42_stdb.diff
include/: commands.h  config.h  datafiles.h  encrypt.h  extern.h  hash.h  irc_string.h  ircdsetup.h  messages.h  my_sql.h  newsserv.h  patchlevel.h  services.h  setup.h.in  stdinc.h  sysconf.h
mailing/: INSTALL  mail.pl  mail.pl.nl  mail.pl.pt  send_expire_emails.sh
scripts/: ftpwww.sh
src/: .depend  Makefile.in  actions.c  akill.c  botlist.c  channels.c  chanserv.c  commands.c  config.c  cs_save.c  datafiles.c  dbinit.c  encrypt.c  hash.c  import-stdb.c  init.c  language.c  list.c  log.c  main.c  match.c  memory.c  memoserv.c  messages.c  misc.c  mysql.c  news.c  newsserv.c  nickserv.c  ns_save.c  operserv.c  process.c  send.c  sessions.c  sockutil.c  sqvline.c  stats.c  timeout.c  users.c  version.c.SH
src/lang/: Makefile.in  de.auth  de.l  de.setemail  en_us.auth  en_us.l  en_us.tr  index  it.l  it.setemail  langcomp.c  nl.auth  nl.l  nl.setemail  pt.auth  pt.l  pt_br.auth  pt_br.l  pt_br.setemail  tr.l  tr.setemail
